debug the active project page

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -38,9 +38,8 @@
                     <div class="row">
                         <div class="col-md-1 d-md-block d-none"></div>
 
-                        <div class="col-md-10 text-right">ای
-
-                            <p class="mb-4">شما در این قسمت می توانید مهارت هایی که برای پروژه خود نیاز دارید را وارد
+                        <div class="col-md-10 text-right">
+                                <p class="mb-4">شما در این قسمت می توانید مهارت هایی که برای پروژه خود نیاز دارید را وارد
                                 کنید.</p>
 
                             <div class="row">
@@ -112,9 +111,9 @@
                         <div class="col-md-1 d-md-block d-none"></div>
                         <div class="col-md-10">
                             <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input inp-cbx" id="autoAddProject"
+                                <input type="checkbox" class="form-check-input inp-cbx" id="researcherAccess"
                                        name="requestResearcher" value=1 hidden checked>
-                                <label class="form-check-label cbx mb-0" for="autoAddProject">
+                                <label class="form-check-label cbx mb-0" for="researcherAccess">
                                         <span>
                                             <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
                                                  xmlns="http://www.w3.org/2000/svg">
