--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -1,6 +1,6 @@
 {% extends "researcher/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}مهارت هاپژوهشی{% endblock %}
+{% block title %}مهارت‌های پژوهشی{% endblock %}
 
 {% block dialog %}
     {% include 'researcher/layouts/technique_review_request.html' %}
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 p-top-15 border-bottom">مهارت هاپژوهشی</h3>
+            <h3 class="h3 p-top-15 border-bottom">مهارت‌های پژوهشی</h3>
             <button class="add-new-technique top-page-button border-button" data-toggle="modal" data-target="#addNewTechnique">
                 <i class="fas fa-plus"></i>
                 <span>افزودن مهارت پژوهشی جدید</span>
