--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5437,12 +5437,12 @@ nav[aria-label="breadcrumb"] ol {
     display: block;
 }
 
-@media (max-width: 1200px) and  (min-width: 992px) {
-    .industry-logo-preview > img {
-        min-width: 112px;
-        margin-right: -26px;
-    }
-}
+/*@media (max-width: 1200px) and  (min-width: 992px) {*/
+/*    .industry-logo-preview > img {*/
+/*        min-width: 112px;*/
+/*        margin-right: -50px;*/
+/*    }*/
+/*}*/
 
 .budget-section {
     margin-top: 5px;
@@ -5522,7 +5522,7 @@ nav[aria-label="breadcrumb"] ol {
     width: max-content;
     width: -moz-max-content;
     min-width: 98%;
-    height: 100%;
+    height: 96%;
     padding: 10px 10px 10px 0;
     text-align: center !important;
     position: relative;
@@ -5598,25 +5598,14 @@ hr.vertical-line:after {
     /*min-height: 120px;*/
     position: relative;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .project-progress .step-container:first-child {
     top: 5%;
 }
 
-.project-progress .step-container:nth-child(2) {
-    top: 27%;
-}
-
-.project-progress .step-container:nth-child(3) {
-    top: 49%;
-}
-
-.project-progress .step-container:nth-child(4) {
-    top: 71%;
-}
-
-.project-progress .step-container:nth-child(5) {
+.project-progress .step-container:last-child {
     top: 93%;
 }
 
@@ -6586,7 +6575,7 @@ table .fas.fa-trash-alt:hover {
     left: 0;
 }
 
-.ct-checklist__item .ct-checklist-item__detail .ct-checklist-item__control button {
+.ct-checklist__item .ct-checklist-item__detail .ct-checklist-item__control button, .ct-option-btn button {
     background-color: rgba(9, 30, 66, .04);
     color: #262626;
     border: none;
@@ -6595,7 +6584,7 @@ table .fas.fa-trash-alt:hover {
     padding: 3px 7px;
 }
 
-.ct-checklist__item .ct-checklist-item__detail .ct-checklist-item__control button:hover {
+.ct-checklist__item .ct-checklist-item__detail .ct-checklist-item__control button:hover, , .ct-option-btn button:hover {
     background-color: #e0e1e2;
 }
 
