debug the show active project page

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -9,7 +9,7 @@
                     <span aria-hidden="true"></span>
                 </button>
             </div>
-            <form id="ajax-project-setting" action="{% url 'industry:project-setting' %}">
+            <form id="ajax-project-setting" enctype="multipart/form-data" action="{% url 'industry:project-setting' %}" >
                 <div class="modal-body">
 
                     <div class="divide__line text-right mb-4">
