--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -53,16 +53,50 @@
                                         </button>
                                     </div>
                                     <div class="ct-task-assignee ct-option-btn">
-                                        <button>
-                                            <svg width="1em" height="1em"
-                                                viewBox="0 0 16 16"
-                                                class="bi bi-person-plus"
-                                                fill="currentColor"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <path fill-rule="evenodd"
-                                                    d="M8 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10zM13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"></path>
-                                            </svg>
-                                        </button>
+                                        <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle ct-option-btn" type="button" id="dropdownAssignment"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <svg width="1em" height="1em"
+                                                    viewBox="0 0 16 16"
+                                                    class="bi bi-person-plus"
+                                                    fill="currentColor"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd"
+                                                        d="M8 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10zM13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"></path>
+                                                </svg>
+                                            </button>
+                                            <div class="dropdown-menu text-right" aria-labelledby="dropdownAssignment">
+                                                    <h6 class="dropdown-header">رئیس پروژه</h6>
+                                                    <div class="dropdown-item d-flex" type="button">
+                                                        <img src="{{ project.involved_user.industryUser.photo }}" width="50px" alt="{{ project.involved_user.industryUser.fullname }}">
+                                                        <div>{{ project.involved_user.industryUser.fullname }}<span> ({{ project.involved_user.industryUser.username }}) </span></div>
+                                                    </div>
+                                                    <h6 class="dropdown-header">استاد</h6>
+                                                    {% for user in project.involved_user.expertUsers %}
+                                                    <div class="dropdown-item d-flex" type="button">
+                                                        {% if user.photo %}
+                                                            <img src="{{ user.photo }}" alt="{{ user.fullname }}" width="50px">
+                                                        {% else %}
+                                                            <img src="{% static 'industry/img/profile.jpg' %}"
+                                                                alt="{{ user.fullname }} " width="50px">
+                                                        {% endif %}
+                                                        <div>{{ user.fullname }}<span> ({{ user.username }}) </span></div>
+                                                    </div>
+                                                    {% endfor %}
+                                                    <h6 class="dropdown-header">پژوهشگر</h6>
+                                                    {% for user in project.involved_user.researcherUsers %}
+                                                        <div class="dropdown-item d-flex" type="button">
+                                                            {% if user.photo %}
+                                                                <img src="{{ user.photo }}" alt="{{ user.fullname }}" width="50px">
+                                                            {% else %}
+                                                                <img src="{% static 'industry/img/profile.jpg' %}"
+                                                                    alt="{{ user.fullname }} " width="50px">
+                                                            {% endif %}
+                                                            <div>{{ user.fullname }}<span> ({{ user.username }}) </span></div>
+                                                        </div>
+                                                    {% endfor %}
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="ct-task-delete ct-option-btn d-none">
                                         <button>
@@ -254,6 +288,7 @@
                                                         <div class="pre-header">
                                                             <span>مجری</span>
                                                         </div>
+                                                        <div class="">
                                                         {% for enforcer in enforcers %}
                                                             <div class="rounded-name-profile clickable mt-2"
                                                                  id="{{ enforcer.id }}"
@@ -268,6 +303,7 @@
                                                                 <span>{{ enforcer.name }}</span>
                                                             </div>
                                                         {% endfor %}
+                                                        </div>
                                                     </div>
                                                     {% if budget_amount %}
                                                         <div class="col-12">
@@ -314,10 +350,10 @@
                                                     <a href="#" class="p-telegram-link rounded-circle rounded-icon">
                                                         <i class="fab fa-telegram-plane" style="font-size: 20px"></i>
                                                     </a>
-                                                    <a href="#" class="p-end_note-link rounded-circle rounded-icon">
+                                                    <a href="https://chamranteam.ir/media/resume/researcher2%40gmail.com/new-resume-researcher2gmail.com-Searching-proposal.pdf" class="p-end_note-link rounded-circle rounded-icon">
                                                         <span>EN</span>
                                                     </a>
-                                                    <a href="#" class="p-proposal-link rounded-circle rounded-icon">
+                                                    <a href="https://chamranteam.ir/media/resume/researcher2%40gmail.com/new-resume-researcher2gmail.com-Searching-proposal.pdf" class="p-proposal-link rounded-circle rounded-icon">
                                                         <i class="fas fa-file-pdf" style="font-size: 18px"></i>
                                                     </a>
                                                 </div>
