--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6588,6 +6588,11 @@ table .fas.fa-trash-alt:hover {
     background-color: #e0e1e2;
 }
 
+.ct-option-btn.dropdown-toggle::after {
+    border-right: none;
+    border-left: none;
+}
+
 .ct-checklist__item .ct-checklist__text {
     font-weight: 400;
     padding-top: 5px;
