add researcher question sample answer

--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -107,6 +107,11 @@
                                 * متن فایل Word بایستی با فونت B Mitra و سایز 14 نوشته شود. عناوین نیز با همین مشخصات و
                                 به صورت Bold نوشته شوند.
                             </p>
+                            <div class="text-center mt-3">
+                                <a href="{% static 'file/پاسخ سوال پژوهشی.rar' %}" class="border-button p-2">
+                                    نمونه پاسخ سوال پژوهشی
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="row mb-5 flex-column-reverse flex-lg-row">
