add project's files and catch date for task ,card andresearcher request

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -88,16 +88,16 @@
                             <div class="form-group">
                                 <label for="endNoteFile" class="d-block file-upload-min">
                                     بارگذاری فایل EndNote
-                                    <span class="file-upload-min-value">برای بارگذاری فایل کلیک کنید!</span>
+                                    <span class="file-upload-min-value end-note-file-name">برای بارگذاری فایل کلیک کنید!</span>
                                 </label>
-                                <input type="file" id="endNoteFile" hidden/>
+                                <input type="file" id="endNoteFile" name="end_note" hidden/>
                             </div>
                             <div class="form-group mb-0">
                                 <label class="d-block file-upload-min" for="proposalFile">
                                     بارگذاری فرم پروپوزال پژوهش
-                                    <span class="file-upload-min-value">برای بارگذاری فایل کلیک کنید!</span>
+                                    <span class="file-upload-min-value proposal-file-name">برای بارگذاری فایل کلیک کنید!</span>
                                 </label>
-                                <input type="file" id="proposalFile" hidden/>
+                                <input type="file" id="proposalFile" name="proposal" hidden/>
                             </div>
                         </div>
                     </div>
