--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -350,10 +350,10 @@
                                                     <a href="#" class="p-telegram-link rounded-circle rounded-icon">
                                                         <i class="fab fa-telegram-plane" style="font-size: 20px"></i>
                                                     </a>
-                                                    <a href="https://chamranteam.ir/media/resume/researcher2%40gmail.com/new-resume-researcher2gmail.com-Searching-proposal.pdf" class="p-end_note-link rounded-circle rounded-icon">
+                                                    <a href="{{end_note}}" class="p-end_note-link rounded-circle rounded-icon">
                                                         <span>EN</span>
                                                     </a>
-                                                    <a href="https://chamranteam.ir/media/resume/researcher2%40gmail.com/new-resume-researcher2gmail.com-Searching-proposal.pdf" class="p-proposal-link rounded-circle rounded-icon">
+                                                    <a href="{{proposal}}" class="p-proposal-link rounded-circle rounded-icon">
                                                         <i class="fas fa-file-pdf" style="font-size: 18px"></i>
                                                     </a>
                                                 </div>
